*grsecurity-sources-4.9.53 (07 Oct 2017)

  07 Oct 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.53.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.53

*grsecurity-sources-4.9.52 (30 Sep 2017)

  30 Sep 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.52.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.52

*grsecurity-sources-4.9.51 (21 Sep 2017)

  21 Sep 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.51.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.51

*grsecurity-sources-4.9.50 (15 Sep 2017)

  15 Sep 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.50.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.50

*grsecurity-sources-4.9.49 (12 Sep 2017)

  12 Sep 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.49.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.49

*grsecurity-sources-4.9.48 (09 Sep 2017)

  09 Sep 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.48.ebuild:
  sys-kernel/grsecurity-sources: Automated version bump to 4.9.48

  24 Aug 2017; Agostino Sarubbo <ago@gentoo.org>
  grsecurity-sources-4.9.44.ebuild:
  sys-kernel/grsecurity-sources: Change description to better reflect the
  reality

*grsecurity-sources-4.9.44 (21 Aug 2017)

  21 Aug 2017; Agostino Sarubbo <ago@gentoo.org>
  +grsecurity-sources-4.9.44.ebuild, +metadata.xml:
  sys-kernel/grsecurity-sources: Initial commit