@@ -8,6 +8,7 @@ DIST grsecurity-sources-extras-4.9.50.tar.xz 2554316 SHA256 6ea9deae6705f6ba6349
 DIST grsecurity-sources-extras-4.9.51.tar.xz 2581044 SHA256 921c41a8577585b21baa3ec5417762c8a211adfc9fe6fa3ac44ce61a0cf55c21 SHA512 a449ca01079f64588ffb7ab2a0880839e8b2165bb8360c4e07ed5985ba2dd5eac5db5a7f6c8bae0e88771a4fc248f11289a4376f32c6420198d9209838d3d13c WHIRLPOOL befab3d1aa291d7244845114d893093f41a15d69586f96af25ffd0812ea9d4109e49c0b3ae8f2f036a452e008a79fa9f6874cbe7192223b9895ff4f840a71295
 DIST grsecurity-sources-extras-4.9.52.tar.xz 2602456 SHA256 5b8074d5bfc88f5aee8614357226d563860a575ba4b8c918d74b95a2f0ceafff SHA512 e77fe1dbeb7eb3d3f8e94a17500b1270ec8db465b8425437459eca37a8e5d154832675580102934d0d8a1a6b5dba643c5c03e9a3c3bd2673a8bc25a88d8e64ad WHIRLPOOL b3be8b0200a7ad68200b101d2613644ad088710e30b3c7403f910050b9a603abcab877d2b38db4bc349eea93b6a1ac84eeef9bfdcdd6835b4ce12bc6d785168b
 DIST grsecurity-sources-extras-4.9.53.tar.xz 2618408 SHA256 e75f863db4c2d592f64f6352b2294105116e29fa4707c50d3ee595eae88b8a66 SHA512 3ef5cf91cf7cb7a30680e5db935479b0f78a93e42dfb0041a9840561735d3b464bb1b2e6428c5994e17553833126b396a4f74c7d0147fca95488ee7d40483281 WHIRLPOOL 4067cf935789dbc392de9668b418c08b7602f3e518c46b1423114be9ead189b86f2e505aad485a48b0300af64b80ed615446a825b60ef0db4c3a11605caac0d1
+DIST grsecurity-sources-extras-4.9.54.tar.xz 2646488 SHA256 b30ec3a3acc1affcc1193535b5ceb0d76ab52318c31848a1b7b710721e7e8bd3 SHA512 f0d34c55df0826d1609e85bdf3e5a0134b86dbfbb97e6f96b9f49fb7d091b9b95f11f3c17007d541cd96bb2d0dcfd527eb9c319f2aef039e0350e6de2e629a79 WHIRLPOOL 491713baf62e6305bc7da94647f68f8d92cd508eaa7172d79f4587902f4f660b97785a460758697b03fcf3863e9369fd9932daa9745aea6335440a1ac3e61313
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
@@ -16,21 +17,22 @@ EBUILD grsecurity-sources-4.9.50.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8
 EBUILD grsecurity-sources-4.9.51.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.52.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.53.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 1531 SHA256 e8e9c1b922578695e6a96a2425c6879e085d57e02f75a2a82766768450f6ebbc SHA512 5999448166046bb4305d4fe5fadb610092ca6fa554cab61333fc9a5b2fc12bb37fdad36716fb79bfd23af38baef2526623898ffba79b21ea6da650fa677e7c52 WHIRLPOOL fcdc6515c8475ca165ddb26a57f902b9bac5ecb92067350b821abb0b181f67957adf4dd06fcfc4e13c10aa835e2d01fcbb60c8c8b9016349b0659579125d4287
+EBUILD grsecurity-sources-4.9.54.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+MISC ChangeLog 1726 SHA256 7d679d2b3149c0519e6123c63bbe578ed80cbbf8b133fde8c4dc8505881ec494 SHA512 226aa504c25ce46bb05f3de69de91fc481a3956227e9a86c4cccd3674d7283d58e4b535e1f9a08e0835035067dd758d35b5bbde5c9e3b802dd34d19e64f23c7d WHIRLPOOL 3cb6faf4e60c53a510c1c8bf2fa2bc7cbdcd627db2ff9c4e61161390776cfa07beb50762b4761650150251420df33af5e4b1b40058fff763c59a747848437882
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlnYjEUACgkQunvTUHGU
-RZ/qXBAAtbgAEARZNQmbBHn72HoOIO8EGpw3dAESgb/1xiN2j59oClj2Ash8fUwk
-6kJHp/sO7QlOF7M8Wef2u6rK/qp6tX1FSSiW1ts2Ul7sunsldlmguUVIuMgyi/zX
-+AEFUEC01lGN4p/VpSblH73OQL6PiuDVb4EIGABjr0xG6UlFZ1RSga2YSukIJOsK
-1WZEqVENlnSmev1VUGC640iyn9eOz23uxUXh3QGJ/BlSwLlh4UUSz+FpP2PB6m7a
-MNFdMoEoN2LwiUQxO9J7YDCPJam6mU60SChnAEma+I2n1H3x4Gyz3lgcbiruX38e
-JxcwZOcv23bkdFEG+90ccQyDSEjdYnJipQo9O6Hoqcantw11thj8TLLdJZEsitu1
-sXinBFZKKUre4yL8O+hf7CqYH118+Y4OINK2qkhzTNPB4i0awSCNR0zzgu9cY5fh
-UPZoPWS6yI55X+/Ez1BNJQq+aDeSDEQ21jKtxCu4MsONXCovGrA3f8O2j9J+D7w9
-Drs5Rg5ldbwC0oQSkF3DcrPoDo48qXRhqTEcCha10Q3WQRgHhBldQ4lkorqcP6JT
-+Xn3Ybd+gWkcFTsOUWAy7qwPkran0jlq9kj0FK20eLfmXJJ4QvLhWJAVjvILhO07
-puyee4aWv4UfFHrFYPpxC8F6WXY81h3k/rd+3Ht9TjeaAHYnjFs=
-=aw25
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlnbiVsACgkQunvTUHGU
+RZ8zJQ//YpctJIZ1wzueAs18WgP5yswyob8X6QcrsvZTRCQI1Sh5g/LYTygl2eyg
+Dl/fu8d5fHcOwNwY0QrW+H2TWVMYlsfh8FoS29lXIYTuW53HhiSmysq0C5WB6Dpi
+JYfhRiVMtaMGq2O5Qj2ypuyz5yulWdisLoRP2bXQW7Bzmcg3Hfo1wQNyVGEB6iIx
+CSDUqSJUX84LOs7aDYg+nxfp5++Oo155zwARDS0LoKe9/KuiZm9635eSoSLC0E/o
+F496huKjYO5KtfSBS4ZPcy21DuulE8RXcSFEF9hQVDZxtjCooi7U9zzUVU9QBYHJ
+ip2x8CYVdjK5ZUnm3EFfgZTpLOaZXqSbCeARvUxGA1+AiuO5eIljyX4viO7Ju0Xc
+Z5p+mO3T/kuxAlXf+7kWFAWZTyS9WlrIZyJVlO1kk6g3Pgdf2CrRuWxMbtyV3XEA
+4KP8LLE839J0w+KzSVfPtQnpxni74sS7T8R+aFXUkwIXqUOgtSQOFEYqLyzZ/6Wq
+sRlDQpacF9fXlqo3YbMWPs/ZwL3nD8q/Pzyq+Hs+7uJ5N+3yS81KAxvbpr1kG8C0
+18p3GxCcg3viNUCdlPHhKixVnfFWUgi4uHEVwK8C2VzqQBQiHWP4oI35JhsVj/YH
+kY3tiKhioODl/TYFs/O2D5vaFsLJUBgP+ZKKdtCHfp8hnuoDSmo=
+=CzRH
 -----END PGP SIGNATURE-----
