@@ -1,3 +1,9 @@
+*grsecurity-sources-4.9.54 (09 Oct 2017)
+
+  09 Oct 2017; Agostino Sarubbo <ago@gentoo.org>
+  +grsecurity-sources-4.9.54.ebuild:
+  sys-kernel/grsecurity-sources: Automated version bump to 4.9.54
+
 *grsecurity-sources-4.9.53 (07 Oct 2017)
 
   07 Oct 2017; Agostino Sarubbo <ago@gentoo.org>
